# travel_recommendation_site

./: .gitignore  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py  models.py
app/adminpanel/: auth.py  views.py
app/attractions/: dao.py  models.py  router.py  schemas.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/destinations/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 1dba140e631c_add_bookings.py  57ce89d80d3f_add_available_slots_to_destinations.py  69569b976845_migration.py  97739bbdbddd_migration.py  b30bee915faf_routes_tables_added.py
app/pages/: router.py
app/reviews/: dao.py  models.py  router.py  schemas.py
app/routes/: dao.py  models.py  router.py  schemas.py
app/routes_attractions/: dao.py  models.py
app/static/css/: styles.css
app/static/css/pages/: admin.css  (+15 more)
app/static/js/: api.js  main.js
app/templates/: base.html  index.html
app/templates/admin/: index.html
app/templates/auth/: login.html  register.html
app/templates/bookings/: create_booking.html  my_bookings.html
app/templates/destinations/: destination_details.html  index.html
app/templates/profile/: index.html  review_details.html
app/templates/routes/: my_routes.html  route_detail.html  routes.html  routes_create.html  routes_edit.html  trip_routes.html
app/templates/trips/: create_trip.html  index.html  trip_details.html
app/trips/: dao.py  models.py  router.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
(+18 files in other folders)
